Implement explain returning very basic explanation of logical plan
- stop trying to build explanation with JSON format
- only return node name, table name if base table and row index of node inputs